--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ravenclaw.co.in</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table cellpadding="20">
-        <tr>
-            <td><img src="circle-cropped.png" alt="Anshuman Srivastava's Picture" height="200" width="200"></td>
-            <td><h1>Anshuman Srivastava</h1>
-                <h3>Also known as <strong>Ravenclaw</strong></h3>
-                <h3>CSE Undergrad at <a href="https://www.gla.ac.in/">GLA University Mathura</a></h3></td>
-        </tr>
+    <table cellpadding="25">
+        <td>
+            <img src="circle-cropped.png" alt="Anshuman Srivastava's Picture" height="200" width="200" class="center">
+        </td>
+        <td>
+            <h1 class="center2">Anshuman Srivastava</h1>
+            <h3 class="center2">Also known as <strong style="color:brown">Ravenclaw</strong></h3>
+            <h3 class="center2">CSE Undergrad at <a href="https://www.gla.ac.in/">GLA University Mathura</a>
+        </td>
     </table>
-    <hr size="3" noshade="">
+    
+    
+    <hr size="3">
     <h2>My Hobbies</h2>
     <ul>
         <li>Coding</li>
@@ -38,7 +43,7 @@
         <li>Sketching</li>
         <li>Listening Music</li>
     </ul>
-    <hr size="3" noshade="">
+    <hr size="3">
     <h2>Skills and Learning</h2>
     <table cellpadding="5">
         <tr>
@@ -72,18 +77,18 @@
             </td>
         </tr>
     </table>
-    <hr size="3" noshade="">
+    <hr size="3">
     <h2>Webpage Remark</h2>
     <form action="mailto:theravenclaw2903@gmail.com" method="post" enctype="text/plain">
         <label>Enter your name</label>
         <input type="text" name="Name"><br><br>
-        <label>Enter your remark</label><br>
+        <label>Enter your remark</label>
         <textarea name="Remark" rows="5" column="1"></textarea><br><br>
         <label>Rate this Webpage:</label>
         <input type="range" name="Rating"><br><br>
         <input type="submit">
     </form>
-    <hr size="3" noshade="">
+    <hr size="3">
     <h2>Contact Details</h2>
     <ul>
         <li>Instagram:<a href="https://www.instagram.com/ravenclaw._10/">ravenclaw._10</a></li>
